Downloaded Danijel's tutorial

--- a/danijelscode/Croatian.ipynb
+++ b/danijelscode/Croatian.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,20 +135,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2022-06-13 09:47:48--  https://github.com/danijel3/CroatianSpeech/releases/download/data/sample.wav\n",
+            "--2022-06-14 10:42:09--  https://github.com/danijel3/CroatianSpeech/releases/download/data/sample.wav\n",
             "Resolving www-proxy.ijs.si (www-proxy.ijs.si)... 2001:1470:ff80::3128:1, 193.2.4.4\n",
             "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
             "Proxy request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/869ef619-6948-4113-8b49-bd33d0a15e6f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220613%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220613T074829Z&X-Amz-Expires=300&X-Amz-Signature=9da650914fcc28e0670f1ed67569ab5d521d855e2e5cde1ffbb028f5ad9f97e3&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dsample.wav&response-content-type=application%2Foctet-stream [following]\n",
-            "--2022-06-13 09:47:49--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/869ef619-6948-4113-8b49-bd33d0a15e6f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220613%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220613T074829Z&X-Amz-Expires=300&X-Amz-Signature=9da650914fcc28e0670f1ed67569ab5d521d855e2e5cde1ffbb028f5ad9f97e3&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dsample.wav&response-content-type=application%2Foctet-stream\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/869ef619-6948-4113-8b49-bd33d0a15e6f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T084249Z&X-Amz-Expires=300&X-Amz-Signature=250bec32c49002bf5be9f507461008983e3a7995883687b0bb9e7516b555ed48&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dsample.wav&response-content-type=application%2Foctet-stream [following]\n",
+            "--2022-06-14 10:42:09--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/869ef619-6948-4113-8b49-bd33d0a15e6f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T084249Z&X-Amz-Expires=300&X-Amz-Signature=250bec32c49002bf5be9f507461008983e3a7995883687b0bb9e7516b555ed48&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dsample.wav&response-content-type=application%2Foctet-stream\n",
             "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
             "Proxy request sent, awaiting response... 200 OK\n",
             "Length: 24160044 (23M) [application/octet-stream]\n",
-            "Saving to: ‘sample.wav’\n",
+            "Saving to: ‘sample.wav.1’\n",
             "\n",
-            "sample.wav          100%[===================>]  23.04M  26.8MB/s    in 0.9s    \n",
+            "sample.wav.1        100%[===================>]  23.04M  29.0MB/s    in 0.8s    \n",
             "\n",
-            "2022-06-13 09:47:50 (26.8 MB/s) - ‘sample.wav’ saved [24160044/24160044]\n",
+            "2022-06-14 10:42:10 (29.0 MB/s) - ‘sample.wav.1’ saved [24160044/24160044]\n",
             "\n"
           ]
         }
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "RUWWfcLnYrd-"
       },
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {
         "id": "6FMSJF5zU8An"
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -383,7 +383,7 @@
               "(0.0, 90.0)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -521,7 +521,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "aeff022332a5416c8464a32744089d73",
+              "model_id": "6a750fc19031406c8f55b6bc738a34c8",
               "version_major": 2,
               "version_minor": 0
             },
@@ -535,7 +535,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ac77217fd1444b36af246a8ab9091451",
+              "model_id": "15f10e780f974bcb9e3c95f93aaa3adc",
               "version_major": 2,
               "version_minor": 0
             },
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -647,7 +647,7 @@
               " 'ide se na nadležnim saborskim tijelima rasprave kako bi onda što je moguće kvalitetnije rješenje kao konačan tekst prijedloga zakona došlo pred nas na raspravu i na glasanje ovako kako je sada došlo ovo je još uvijek sirovmaterijal hvala vam']"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -667,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -721,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -734,21 +734,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2022-06-13 09:58:22--  https://github.com/danijel3/CroatianSpeech/releases/download/lm/lm.arpa.gz\n",
+            "--2022-06-14 10:43:01--  https://github.com/danijel3/CroatianSpeech/releases/download/lm/lm.arpa.gz\n",
             "Resolving www-proxy.ijs.si (www-proxy.ijs.si)... 2001:1470:ff80::3128:1, 193.2.4.4\n",
             "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
             "Proxy request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/61ef4e13-1f10-4716-82ed-fbda60a2e6ea?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220613%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220613T075902Z&X-Amz-Expires=300&X-Amz-Signature=6d9277710ae2eda32936146cf2b154d1df33efdb2e571d3ef14c237dd27f15dd&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dlm.arpa.gz&response-content-type=application%2Foctet-stream [following]\n",
-            "--2022-06-13 09:58:22--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/61ef4e13-1f10-4716-82ed-fbda60a2e6ea?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220613%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220613T075902Z&X-Amz-Expires=300&X-Amz-Signature=6d9277710ae2eda32936146cf2b154d1df33efdb2e571d3ef14c237dd27f15dd&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dlm.arpa.gz&response-content-type=application%2Foctet-stream\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/61ef4e13-1f10-4716-82ed-fbda60a2e6ea?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T084342Z&X-Amz-Expires=300&X-Amz-Signature=988a844519636dc911b3b370021d2d2360eefa77376ffeb58843533334351f28&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dlm.arpa.gz&response-content-type=application%2Foctet-stream [following]\n",
+            "--2022-06-14 10:43:02--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/439990315/61ef4e13-1f10-4716-82ed-fbda60a2e6ea?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T084342Z&X-Amz-Expires=300&X-Amz-Signature=988a844519636dc911b3b370021d2d2360eefa77376ffeb58843533334351f28&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=439990315&response-content-disposition=attachment%3B%20filename%3Dlm.arpa.gz&response-content-type=application%2Foctet-stream\n",
             "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
             "Proxy request sent, awaiting response... 200 OK\n",
             "Length: 53388771 (51M) [application/octet-stream]\n",
             "Saving to: ‘lm.arpa.gz’\n",
             "\n",
-            "lm.arpa.gz          100%[===================>]  50.92M  16.9MB/s    in 3.0s    \n",
+            "lm.arpa.gz          100%[===================>]  50.92M  16.6MB/s    in 3.1s    \n",
             "\n",
-            "2022-06-13 09:58:26 (16.9 MB/s) - ‘lm.arpa.gz’ saved [53388771/53388771]\n",
-            "\n"
+            "2022-06-14 10:43:05 (16.6 MB/s) - ‘lm.arpa.gz’ saved [53388771/53388771]\n",
+            "\n",
+            "gzip: lm.arpa already exists; do you wish to overwrite (y or n)? ^C\n"
           ]
         }
       ],
@@ -768,7 +769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -781,11 +782,11 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Found entries of length > 1 in alphabet. This is unusual unless style is BPE, but the alphabet was not recognized as BPE type. Is this correct?\n",
             "Loading the LM will be faster if you build a binary file.\n",
             "Reading /home/peterr/macocu/task13/danijelscode/lm.arpa\n",
             "----5---10---15---20---25---30---35---40---45---50---55---60---65---70---75---80---85---90---95--100\n",
             "****************************************************************************************************\n",
+            "Found entries of length > 1 in alphabet. This is unusual unless style is BPE, but the alphabet was not recognized as BPE type. Is this correct?\n",
             "Unigrams and labels don't seem to agree.\n"
           ]
         }
@@ -808,7 +809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -834,7 +835,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "371e81507f7e4cbebab4fd2ab0dc64e1",
+              "model_id": "181931b72ea048f98e755e6315a91c99",
               "version_major": 2,
               "version_minor": 0
             },
@@ -885,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -927,7 +928,7 @@
               " 'ide se na nadležnim saborskim tijelima rasprave kako bi onda što je moguće kvalitetnije rješenje kao konačan tekst prijedloga zakona došlo pred nas na raspravu i na glasanje ovako kako je sada došlo ovo je još uvijek sirovmaterijal hvala vam']"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -947,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1001,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 17,
       "metadata": {
         "id": "5p_Yazk_UTU5"
       },
