--- a/danijelscode/Matching.ipynb
+++ b/danijelscode/Matching.ipynb
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,37 +119,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2021-12-26 21:18:55--  https://github.com/danijel3/TextNormalize/raw/master/hrvatski.py\n",
-            "Resolving github.com (github.com)... 13.114.40.48\n",
-            "Connecting to github.com (github.com)|13.114.40.48|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
+            "--2022-06-14 07:56:18--  https://github.com/danijel3/TextNormalize/raw/master/hrvatski.py\n",
+            "Resolving www-proxy.ijs.si (www-proxy.ijs.si)... 2001:1470:ff80::3128:1, 193.2.4.4\n",
+            "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
+            "Proxy request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/danijel3/TextNormalize/master/hrvatski.py [following]\n",
-            "--2021-12-26 21:18:56--  https://raw.githubusercontent.com/danijel3/TextNormalize/master/hrvatski.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
+            "--2022-06-14 07:56:18--  https://raw.githubusercontent.com/danijel3/TextNormalize/master/hrvatski.py\n",
+            "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
+            "Proxy request sent, awaiting response... 200 OK\n",
             "Length: 5761 (5.6K) [text/plain]\n",
-            "Saving to: ‘hrvatski.py’\n",
+            "Saving to: ‘hrvatski.py.1’\n",
             "\n",
-            "hrvatski.py         100%[===================>]   5.63K  --.-KB/s    in 0s      \n",
+            "hrvatski.py.1       100%[===================>]   5.63K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-12-26 21:18:56 (55.9 MB/s) - ‘hrvatski.py’ saved [5761/5761]\n",
+            "2022-06-14 07:56:18 (22.2 MB/s) - ‘hrvatski.py.1’ saved [5761/5761]\n",
             "\n",
-            "--2021-12-26 21:18:56--  https://github.com/danijel3/TextNormalize/raw/master/strings_hr.py\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
+            "--2022-06-14 07:56:19--  https://github.com/danijel3/TextNormalize/raw/master/strings_hr.py\n",
+            "Resolving www-proxy.ijs.si (www-proxy.ijs.si)... 2001:1470:ff80::3128:1, 193.2.4.4\n",
+            "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
+            "Proxy request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/danijel3/TextNormalize/master/strings_hr.py [following]\n",
-            "--2021-12-26 21:18:56--  https://raw.githubusercontent.com/danijel3/TextNormalize/master/strings_hr.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
+            "--2022-06-14 07:56:19--  https://raw.githubusercontent.com/danijel3/TextNormalize/master/strings_hr.py\n",
+            "Connecting to www-proxy.ijs.si (www-proxy.ijs.si)|2001:1470:ff80::3128:1|:8080... connected.\n",
+            "Proxy request sent, awaiting response... 200 OK\n",
             "Length: 5119 (5.0K) [text/plain]\n",
-            "Saving to: ‘strings_hr.py’\n",
+            "Saving to: ‘strings_hr.py.1’\n",
             "\n",
-            "strings_hr.py       100%[===================>]   5.00K  --.-KB/s    in 0s      \n",
+            "strings_hr.py.1     100%[===================>]   5.00K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-12-26 21:18:57 (65.8 MB/s) - ‘strings_hr.py’ saved [5119/5119]\n",
+            "2022-06-14 07:56:19 (37.1 MB/s) - ‘strings_hr.py.1’ saved [5119/5119]\n",
             "\n"
           ]
         }
@@ -174,7 +172,21 @@
       "metadata": {
         "id": "7O1NYRMY7kiM"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ImportError",
+          "evalue": "cannot import name 'abbreviations' from partially initialized module 'strings_hr' (most likely due to a circular import) (/home/peterr/macocu/task13/danijelscode/strings_hr.py)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipykernel_12416/3801951393.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mhrvatski\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdataclasses\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdataclass\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtyping\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSet\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mList\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mdataclass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m~/macocu/task13/danijelscode/hrvatski.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstrings_hr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mabbreviations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msym_ignore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msymbols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_to_text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint_abbrev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m~/macocu/task13/danijelscode/strings_hr.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstrings_hr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mabbreviations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msym_ignore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msymbols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_to_text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint_abbrev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'abbreviations' from partially initialized module 'strings_hr' (most likely due to a circular import) (/home/peterr/macocu/task13/danijelscode/strings_hr.py)"
+          ]
+        }
+      ],
       "source": [
         "from hrvatski import normalize\n",
         "from dataclasses import dataclass,field\n",
@@ -292,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "0hvVSKAfGljo"
       },
