--- a/012_matching.ipynb
+++ b/012_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,17 +35,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>audio/58xZSVbpgkk.wav</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>40.1</td>\n",
-       "      <td>nekoliko puta smo ponavljali da nio od uvođenj...</td>\n",
+       "      <td>audio/00DtyZ2sCUM.wav</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>upreko s pričama da srbiji ide sve bolje izgle...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>audio/58xZSVbpgkk.wav</td>\n",
-       "      <td>40.1</td>\n",
-       "      <td>62.5</td>\n",
-       "      <td>nije problem u narodni poslanicima mi jeste pr...</td>\n",
+       "      <td>audio/00DtyZ2sCUM.wav</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>43.4</td>\n",
+       "      <td>kada su mediji nedavno prenijeli informaciju g...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -53,15 +53,15 @@
       ],
       "text/plain": [
        "                    file  start   end  \\\n",
-       "0  audio/58xZSVbpgkk.wav   11.5  40.1   \n",
-       "1  audio/58xZSVbpgkk.wav   40.1  62.5   \n",
+       "0  audio/00DtyZ2sCUM.wav   12.0  27.5   \n",
+       "1  audio/00DtyZ2sCUM.wav   27.5  43.4   \n",
        "\n",
        "                                           predicted  \n",
-       "0  nekoliko puta smo ponavljali da nio od uvođenj...  \n",
-       "1  nije problem u narodni poslanicima mi jeste pr...  "
+       "0  upreko s pričama da srbiji ide sve bolje izgle...  \n",
+       "1  kada su mediji nedavno prenijeli informaciju g...  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(143,)"
+       "(293,)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
