--- a/013_porting_tutorial.ipynb
+++ b/013_porting_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
     "segs = pd.read_csv(\"011_segments.csv\").rename(columns={\"predicted\":\"text\"})\n",
     "segs[\"asr_transcription\"] = \"\"\n",
     "segs[\"ratio\"] = \"\"\n",
+    "segs[\"webpage_transcript\"] = \"\"\n",
     "for path in segs.file.unique():\n",
     "    try:\n",
     "        cond = segs.file == path\n",
@@ -43,7 +44,10 @@
     "            matcher = Matcher(transcription_file)\n",
     "        positions = matcher.match(asr_results)\n",
     "        segs.loc[cond, \"asr_transcription\"] = [\" \".join(i.segment.text) for i in positions]\n",
-    "        segs.loc[cond, \"asr_transcription\"] = [i.ratio for i in positions]\n",
+    "        segs.loc[cond, \"webpage_transcript\"] = [\" \".join(\n",
+    "            original_transcription.split()[i.corp_start:i.corp_end+1]\n",
+    "        ) for i in positions]\n",
+    "        segs.loc[cond, \"ratio\"] = [i.ratio for i in positions]\n",
     "    except AttributeError:\n",
     "        continue\n",
     "segs.to_json(\"013_segments_matched.jsonl\", orient=\"records\", lines=True)"
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +64,7 @@
        "(293,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,6 +73,81 @@
     "import pandas as pd\n",
     "df = pd.read_json(\"013_segments_matched.jsonl\", orient=\"records\", lines=True)\n",
     "df.file.unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Od',\n",
+       " 'kada',\n",
+       " 'je',\n",
+       " '2004.',\n",
+       " 'usvojen',\n",
+       " 'Zakon',\n",
+       " 'o',\n",
+       " 'slobodnom',\n",
+       " 'pristupu',\n",
+       " 'informacijama',\n",
+       " 'od',\n",
+       " 'javnog',\n",
+       " 'značaja',\n",
+       " 'postao',\n",
+       " 'je',\n",
+       " 'nezaobilazan',\n",
+       " 'alat',\n",
+       " 'za',\n",
+       " 'mnoge',\n",
+       " 'novinare',\n",
+       " 'ali',\n",
+       " 'i',\n",
+       " 'građanske',\n",
+       " 'aktiviste.',\n",
+       " 'Poput',\n",
+       " 'šale,',\n",
+       " 'kada',\n",
+       " 'dečak',\n",
+       " 'pita',\n",
+       " 'roditelje',\n",
+       " 'kako',\n",
+       " 'ste',\n",
+       " 'vi',\n",
+       " 'slali',\n",
+       " 'emailove',\n",
+       " 'pre']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_transcription.split()[19:55]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Position(corp_start=19, corp_end=55, seg_start=0, seg_end=37, ratio=0.8493150684931506, segment=Segment(file='audio/fTfyE4ZdZqY.wav', start=16.3, end=33.1, text=['od', 'kada', 'je', '2004.', 'usvojen', 'zakon', 'o', 'slobodnom', 'pristupu', 'informacijama', 'od', 'javnog', 'značaja', 'postao', 'je', 'nezaobila', 'za', 'nalad', 'za', 'mnoge', 'novinare', 'ali', 'i', 'građanske', 'aktiviste', 'e', 'sada', 'poput', 'šale', 'kada', 'dečak', 'pita', 'roditelje', 'kako', 'ste', 'vi', 'slali']))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positions[0]"
    ]
   },
   {
