NBs and data for metadata extraction

--- a/019_extracting_video_metadata.ipynb
+++ b/019_extracting_video_metadata.ipynb
@@ -2,120 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>yt_hash</th>\n",
-       "      <th>transcript</th>\n",
-       "      <th>exists</th>\n",
-       "      <th>path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Boban-Sto...</td>\n",
-       "      <td>00DtyZ2sCUM</td>\n",
-       "      <td>Gost: Boban Stojanović, redovni profesor Ekono...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>audio/00DtyZ2sCUM.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Slavoljub...</td>\n",
-       "      <td>58xZSVbpgkk</td>\n",
-       "      <td>Gost: Slavoljub Vlajković, narodni poslanik SP...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>audio/58xZSVbpgkk.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Zoran-Ziv...</td>\n",
-       "      <td>YKAqDCyINz4</td>\n",
-       "      <td>Gost: Zoran Žuvković, predsednik Nove stranke\\...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>audio/YKAqDCyINz4.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Majkl-Dev...</td>\n",
-       "      <td>2QShGnPuVjQ</td>\n",
-       "      <td>Gost: Majkl Devenport, Šef Delegacije EU u Srb...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>audio/2QShGnPuVjQ.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Jelena-Dj...</td>\n",
-       "      <td>khEIELaXKwI</td>\n",
-       "      <td>Gost: Jelena Đorđević, Odbornica u Skupštini g...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>audio/khEIELaXKwI.wav</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 url      yt_hash  \\\n",
-       "0  https://www.juznevesti.com/15-minuta/Boban-Sto...  00DtyZ2sCUM   \n",
-       "1  https://www.juznevesti.com/15-minuta/Slavoljub...  58xZSVbpgkk   \n",
-       "2  https://www.juznevesti.com/15-minuta/Zoran-Ziv...  YKAqDCyINz4   \n",
-       "3  https://www.juznevesti.com/15-minuta/Majkl-Dev...  2QShGnPuVjQ   \n",
-       "4  https://www.juznevesti.com/15-minuta/Jelena-Dj...  khEIELaXKwI   \n",
-       "\n",
-       "                                          transcript  exists  \\\n",
-       "0  Gost: Boban Stojanović, redovni profesor Ekono...    True   \n",
-       "1  Gost: Slavoljub Vlajković, narodni poslanik SP...    True   \n",
-       "2  Gost: Zoran Žuvković, predsednik Nove stranke\\...    True   \n",
-       "3  Gost: Majkl Devenport, Šef Delegacije EU u Srb...    True   \n",
-       "4  Gost: Jelena Đorđević, Odbornica u Skupštini g...    True   \n",
-       "\n",
-       "                    path  \n",
-       "0  audio/00DtyZ2sCUM.wav  \n",
-       "1  audio/58xZSVbpgkk.wav  \n",
-       "2  audio/YKAqDCyINz4.wav  \n",
-       "3  audio/2QShGnPuVjQ.wav  \n",
-       "4  audio/khEIELaXKwI.wav  "
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"006_crawling_juznevesti.csv\")\n",
-    "df.head()"
+    "df = pd.read_csv(\"006_crawling_juznevesti.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +42,6 @@
     "        del results[\"voditi_suffix_and_sep\"]\n",
     "        return results\n",
     "\n",
-    "\n",
     "num_errors = 0\n",
     "for i in df.transcript.values:\n",
     "    try:\n",
@@ -161,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +158,7 @@
        " 'Moje ime je Sanja Janačković, gledali ste emisiju 15 minuta.']"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
