--- a/026_splitting.ipynb
+++ b/026_splitting.ipynb
@@ -283,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newmer.to_json(\"026_JV_segments.jsonl\", lines=True, orient=\"records\")"
+    "newmer.to_json(\"026_JV_segments_splits.jsonl\", lines=True, orient=\"records\")"
    ]
   },
   {
@@ -759,6 +759,26 @@
    "source": [
     "import numpy as np\n",
     "10 * np.log10(2516)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19563407640366293"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newmer.raw_transcript__matched_on_kaldi.str.contains(\"JV:\").sum()/newmer.shape[0]"
    ]
   },
   {
